--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1806,6 +1806,7 @@ input, select, textarea {
 	form input[type="text"],
 	form input[type="email"],
 	form input[type="number"],
+	form input[type="tel"],
 	form input[type="date"],
 	form input[type="password"],
 	form select,
@@ -1828,7 +1829,7 @@ input, select, textarea {
 		form input[type="text"]:focus,
 		form input[type="email"]:focus,
 		form input[type="number"]:focus,
-		form input[type="number"]:focus,
+		form input[type="tel"]:focus,
 		form input[type="password"]:focus,
 		form select:focus,
 		form textarea:focus {
